# kbd-trainer

./: .clang-tidy  .gitignore  CMakeLists.txt
src/: game.cpp  game.hpp  input.cpp  input.hpp  main.cpp  render.cpp  render.hpp
